[spalenque] - #10686 - fix unpublished list not showing pager

--- a/summit/css/summit-admin.css
+++ b/summit/css/summit-admin.css
@@ -84,13 +84,13 @@
 
 .unpublished-container .unpublished-events-list-container {
     height: 100%;
-    margin-top: 20px;
 }
 
 .unpublished-container .unpublished-events-list {
     overflow-y: auto;
-    height: 75%;
+    height: 74%;
     position: relative;
+    margin-bottom: 0px;
 }
 
 .unpublished-events-list::-webkit-scrollbar {
@@ -107,7 +107,7 @@
 }
 
 .unpublished-container .items_per_page {
-    margin: 10px 0;
+    margin: 0 0 10px 0;
     float:  right;
     width: 20%;
 }
@@ -122,7 +122,7 @@
 }
 
 #unpublished-events-pager {
-    margin: 10px 0 20px 0;
+    margin: 0 0 20px 0;
 }
 
 /* SCHEDULE RESULTS */
